--- a/MyWalletApp/app/src/main/res/layout/custom_listview_wallet_manager.xml
+++ b/MyWalletApp/app/src/main/res/layout/custom_listview_wallet_manager.xml
@@ -5,19 +5,22 @@
     android:orientation="horizontal"
     android:paddingBottom="3dp"
     android:paddingLeft="3dp"
-    android:paddingTop="3dp">
+    android:paddingTop="3dp"
+    android:weightSum="7">
 
     <ImageView
         android:id="@+id/image_category_item"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_weight="1"
         android:paddingLeft="5dp"
         android:src="@mipmap/ic_salary_small" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
         android:orientation="vertical"
         android:paddingLeft="10dp">
 
@@ -37,34 +40,48 @@
             android:textAppearance="?android:attr/textAppearanceMedium" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/txtValue"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="20dp"
-        android:text="Value of item"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="end|center_horizontal"
+        android:layout_weight="3"
+        android:gravity="end|center_horizontal"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/image_edit"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:background="#f5f4f1"
-        android:paddingLeft="10dp"
-        android:paddingRight="2dp"
-        android:src="@mipmap/ic_edit"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/txtValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:paddingRight="2dp"
+            android:paddingTop="20dp"
+            android:text="value"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/image_delete"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:background="#f2dea2"
-        android:paddingRight="10dp"
-        android:src="@mipmap/ic_delete"
-        android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:paddingTop="10dp">
 
+        <ImageView
+            android:id="@+id/image_edit"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="#f5f4f1"
+            android:paddingRight="2dp"
+            android:src="@mipmap/ic_edit"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/image_delete"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="#f2dea2"
+            android:src="@mipmap/ic_delete"
+            android:visibility="gone" />
+    </LinearLayout>
 </LinearLayout>
