--- a/MyWalletApp/app/src/main/res/layout/custom_keyboard.xml
+++ b/MyWalletApp/app/src/main/res/layout/custom_keyboard.xml
@@ -121,7 +121,7 @@
             android:gravity="center">
 
             <ImageView
-                android:id="@+id/key_clear"
+                android:id="@+id/key_backspace"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_clear" />
