--- a/MyWalletApp/app/src/main/res/layout/custom_keyboard.xml
+++ b/MyWalletApp/app/src/main/res/layout/custom_keyboard.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -80,6 +81,7 @@
         </TableLayout>
 
         <LinearLayout
+            style="@style/keyboard_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
@@ -88,17 +90,32 @@
             android:showDividers="beginning|middle"
             android:weightSum="9">
 
-            <TextView
-                android:id="@+id/key_comma"
-                style="@style/keyboard_button_my"
-                android:layout_weight="3"
-                android:text="@string/_comma" />
 
-            <TextView
-                android:id="@+id/key_0"
-                style="@style/keyboard_button_my"
-                android:layout_weight="6"
-                android:text="@string/number_zero" />
+            <!--<LinearLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent"-->
+
+                <!--android:layout_weight="6">-->
+
+                <!--<TextView-->
+                    <!--android:id="@+id/key_comma"-->
+                    <!--style="@style/keyboard_button"-->
+                    <!--android:text="@string/_comma" />-->
+            <!--</LinearLayout>-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="3">
+
+                <TextView
+                    android:id="@+id/key_0"
+                    android:showDividers="beginning|middle"
+                    style="@style/keyboard_number_button"
+                    android:text="@string/number_zero" />
+            </LinearLayout>
+
+
         </LinearLayout>
     </LinearLayout>
 
@@ -122,8 +139,8 @@
 
             <ImageView
                 android:id="@+id/key_backspace"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@mipmap/ic_clear" />
 
         </LinearLayout>
