--- a/MyWalletApp/app/src/main/res/layout/activity_item.xml
+++ b/MyWalletApp/app/src/main/res/layout/activity_item.xml
@@ -18,43 +18,72 @@
         android:paddingTop="8dp"
         android:weightSum="10">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:background="@drawable/border_text_view_normal"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:layout_weight="1.3"
+            android:background="@drawable/border_layout">
 
-            <TextView
-                android:id="@+id/txt_income_acti_item"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/border_text_view_income"
                 android:gravity="center"
-                android:text="INCOME"
-                android:textColor="@color/white"
-                android:textSize="30dp" />
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-            <TextView
-                android:id="@+id/txt_expense_acti_item"
-                android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/txt_income_trans"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_text_view_income"
+                    android:gravity="center"
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:id="@+id/txt_expense_trans"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textSize="30dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/border_text_view_expense"
                 android:gravity="center"
-                android:text="EXPENSE"
-                android:textColor="#FFFFFF"
-                android:textSize="30dp" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/txt_income_acti_item"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:text="INCOME"
+                    android:textSize="30dp" />
+
+                <TextView
+                    android:id="@+id/txt_expense_acti_item"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:gravity="center"
+                    android:text="EXPENSE"
+                    android:textSize="30dp" />
+            </LinearLayout>
+
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_weight="1.5"
+            android:layout_weight="1.7"
             android:gravity="bottom|center"
             android:orientation="horizontal">
 
@@ -73,9 +102,9 @@
                 android:id="@+id/txt_zero_acti_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="bottom"
                 android:singleLine="true"
                 android:text=",000"
-                android:gravity="bottom"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -165,10 +194,10 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:gravity="center|left"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
                 android:layout_weight="3"
+                android:gravity="center|left"
                 android:text="Category"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold" />
@@ -204,8 +233,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="4"
             android:gravity="center_horizontal">
 
             <include layout="@layout/custom_keyboard" />
